force-app/main/default/objects/Data_Status_Mapping__c/Data_Status_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Data Status Mapping</label>
</CustomObject>