force-app/main/default/objects/Data_Status_Mapping__c/fields/Description1__c.field-meta.xml
<CustomField>
    <fullName>Description1__c</fullName>
    <description>Description1</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Description1</inlineHelpText>
    <label>Description1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>