force-app/main/default/objects/Data_Status_Mapping__c/fields/Description2__c.field-meta.xml
<CustomField>
    <fullName>Description2__c</fullName>
    <description>Description2</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Description2</inlineHelpText>
    <label>Description2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>