force-app/main/default/objects/Data_Status_Mapping__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>150</length>
    <type>Text</type>
</CustomField>