force-app/main/default/objects/Data_Status_Mapping__c/listViews/all.listView-meta.xml
<ListView>
    <fullName>all</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Description1__c</columns>
    <columns>Description2__c</columns>
    <filterScope>Everything</filterScope>
    <label>all</label>
</ListView>